// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should mark the current track the user is listening to 1`] = `
Array [
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "created",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"[test (1:10)](https://test.com) [<@testAuthorId>] has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: [test (1:10)](https://test.com) [<@testAuthorId>]\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "found",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"[test2 (1:10)](https://test2.com) [<@testAuthorId>] has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: [test2 (1:10)](https://test2.com) [<@testAuthorId>]\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 6,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/queue",
      },
    },
  },
  TestMessageValue {
    "frame": 6,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": \\"Queue\\",
          \\"type\\": \\"rich\\",
          \\"description\\": \\"\`0)\` [test (1:10)](https://test.com) [<@testAuthorId>]\\\\n\`1)\` [test2 (1:10)](https://test2.com) [<@testAuthorId>] ← Currently playing\\",
          \\"url\\": null,
          \\"timestamp\\": \\"2000-02-01T00:00:00.000Z\\",
          \\"color\\": 16758815,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 10,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
]
`;

exports[`should print queue 1`] = `
Array [
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "created",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"[test (1:10)](https://test.com) [<@testAuthorId>] has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: [test (1:10)](https://test.com) [<@testAuthorId>]\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/queue",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": \\"Queue\\",
          \\"type\\": \\"rich\\",
          \\"description\\": \\"\`0)\` [test (1:10)](https://test.com) [<@testAuthorId>] ← Currently playing\\",
          \\"url\\": null,
          \\"timestamp\\": \\"2000-02-01T00:00:00.000Z\\",
          \\"color\\": 16758815,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
]
`;

exports[`should print queue with multiple tracks 1`] = `
Array [
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "created",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"[test (1:10)](https://test.com) [<@testAuthorId>] has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: [test (1:10)](https://test.com) [<@testAuthorId>]\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "found",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"[test2 (1:10)](https://test2.com) [<@testAuthorId>] has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/queue",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": \\"Queue\\",
          \\"type\\": \\"rich\\",
          \\"description\\": \\"\`0)\` [test (1:10)](https://test.com) [<@testAuthorId>] ← Currently playing\\\\n\`1)\` [test2 (1:10)](https://test2.com) [<@testAuthorId>]\\",
          \\"url\\": null,
          \\"timestamp\\": \\"2000-02-01T00:00:00.000Z\\",
          \\"color\\": 16758815,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: [test2 (1:10)](https://test2.com) [<@testAuthorId>]\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 10,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
]
`;

exports[`should print queue with no tracks 1`] = `
Array [
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/queue",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": \\"The queue is empty 👀\\",
          \\"type\\": \\"rich\\",
          \\"description\\": null,
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
]
`;

exports[`should queue song if another one is already playing 1`] = `
Array [
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "created",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"[test (1:10)](https://test.com) [<@testAuthorId>] has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: [test (1:10)](https://test.com) [<@testAuthorId>]\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "found",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"[test2 (1:10)](https://test2.com) [<@testAuthorId>] has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "found",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"[test3 (1:10)](https://test3.com) [<@testAuthorId>] has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: [test2 (1:10)](https://test2.com) [<@testAuthorId>]\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 10,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
  TestMessageValue {
    "frame": 10,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: [test3 (1:10)](https://test3.com) [<@testAuthorId>]\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 15,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
]
`;
